# zchat-desktop

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
