[package]
name = "zchat-desktop"
version = "0.1.0"
description = "ZChat Agent Desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "zchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = ">=2.1.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
